--- a/src/app/options/options.component.css
+++ b/src/app/options/options.component.css
@@ -1,26 +1,30 @@
 footer {
-  position: fixed;
-  right: 0.5em;
-  bottom: 0;
+  font-family: Helvetica, Arial, sans-serif;
+}
+footer > div {
+  display: none;
+  flex-direction: column;
   padding-bottom: 1em;
   background: #222;
   border: 1px solid silver;
-  transition: transform 0.75s cubic-bezier(0.4, 0, 0.2, 1);
-  transform: translateY(calc(100% - 2.25em));
-}
-footer.open {
-  transform: none;
-}
-footer > div {
+  width: max-content;
   max-height: calc(94vh - 2.5em);
+  max-width: 50vw;
+  margin: auto;
   overflow: auto;
+}
+footer.open > div {
+  display: flex;
 }
 
 h3 {
+  position: fixed;
+  right: 0.5em;
+  bottom: 0;
   margin: 0 0 0.5em;
   padding: 0.25em;
   background-color: #444;
-  border-bottom: 1px solid silver;
+  border: 1px solid silver;
   text-align: center;
   cursor: pointer;
 }
@@ -30,15 +34,35 @@ h4 {
   padding-left: 0.5em;
 }
 
+ul + h4 {
+  margin-top: 1em;
+}
+
+label {
+  margin-left: -1.25em;
+  white-space: nowrap;
+}
+
 ul {
   list-style: none;
   margin: 0;
   padding: 0 1em;
 }
-ul.promoCards {
-  margin: 0 0 0 1.5em;
-  padding: 0 0.5em;
-  border-left: 1px solid silver;
+ul li {
+  display: grid;
+  grid-template-columns: 5em 1fr;
+  margin: 0.5em 0 0 1.5em;
+}
+ul li ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+ul li ul li {
+  margin: 0 1em;
+}
+
+ul.promos > li {
+  grid-template-columns: 1fr;
 }
 
 /*# sourceMappingURL=options.component.css.map */
