New and updated cards

--- a/src/app/card-detail/card-detail.component.html
+++ b/src/app/card-detail/card-detail.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="card" [ngClass]="front ? 'front' : 'back'">
-	<section (click)="front = !front">
-		<aside><img src="assets/cards/{{ card.cardType.includes('Permanent') ? 'permanents' : card.set.replace(' ', '_') }}/{{ card.name.replace('’', '').replace('/', '').split(' ').join('_') }}.jpg"></aside>
+<div *ngIf="card">
+	<section>
+		<aside><img src="assets/cards/{{ card.cardType.includes('Permanent') ? 'permanents' : card.set.replace(' ', '_') }}/{{ card.name.replace('’', '').replace('/', '').split(' ').join('_') }}.jpg" alt="card image"></aside>
 		<article>
 			<h2>{{ card.name }}</h2>
 			<p class="text" [innerHTML]="card.text"></p>
@@ -17,12 +17,13 @@
 				<span *ngIf="card.setup.horse">Horses</span>
 				<span *ngIf="card.setup.coffers">Coffers</span>
 				<span *ngIf="card.setup.villagers">Villagers</span>
+				<span *ngIf="card.cardType.includes('Liaison')">Favors</span>
 				<span *ngIf="card.setup.journey">Journey tokens</span>
 				<span *ngIf="card.setup.plusAction">+1 Action tokens</span>
 				<span *ngIf="card.setup.plusCard">+1 Card tokens</span>
 				<span *ngIf="card.setup.plusBuy">+1 Buy tokens</span>
-				<span *ngIf="card.setup.plusOne">+<img src="assets/Coin1.png"> tokens</span>
-				<span *ngIf="card.setup.minusOne">−<img src="assets/Coin1.png"> tokens</span>
+				<span *ngIf="card.setup.plusOne">+<img src="assets/Coin1.png" alt="1 coin"> tokens</span>
+				<span *ngIf="card.setup.minusOne">−<img src="assets/Coin1.png" alt="1 coin"> tokens</span>
 				<span *ngIf="card.setup.minusDraw">−1 Card tokens</span>
 				<span *ngIf="card.id === 305">Embargo tokens</span>
 				<span *ngIf="card.id === 310">Island mats</span>
@@ -35,7 +36,7 @@
 				<span *ngIf="card.id === 833">Mercenary</span>
 				<span *ngIf="card.id === 1018">Page upgrades</span>
 				<span *ngIf="card.id === 1019">Peasant upgrades</span>
-				<span *ngIf="card.id === 1036">−<img src="assets/Coin2.png"> tokens</span>
+				<span *ngIf="card.id === 1036">−<img src="assets/Coin2.png" alt="2 coins"> tokens</span>
 				<span *ngIf="card.id === 1037">Estate tokens</span>
 				<span *ngIf="card.id === 1042">Trashing tokens</span>
 				<span *ngIf="card.id === 1151">Obelisk selection</span>
@@ -50,10 +51,11 @@
 				<span *ngIf="card.id === 1230">Pouch</span>
 				<span *ngIf="card.id === 1220">Zombies</span>
 				<span *ngIf="card.id === 1232">Bats</span>
+				<span *ngIf="card.setup.loot">Loot</span>
+				<span *ngIf="card.cardType.includes('Project')">Wooden cubes</span>
 				<span *ngIf="card.cardType.includes('Fate')">Boons</span>
 				<span *ngIf="card.cardType.includes('Doom')">Hexes</span>
 				<span *ngIf="card.cardType.includes('Fate') || card.id === 1212">Will o' Wisps</span>
-				<span *ngIf="card.cardType.includes('Project')">Wooden cubes</span>
 				<span *ngIf="card.id === 1229 || card.id === 1212">Imps</span>
 				<span *ngIf="card.id === 1203 || card.id === 1212">Ghosts</span>
 				<span *ngIf="card.id === 1226 || card.id === 1218">Wishes</span>
@@ -62,6 +64,7 @@
 				<span *ngIf="card.id === 1306">Flag</span>
 				<span *ngIf="card.id === 1323">Treasure Chest</span>
 				<span *ngIf="card.id === 1324">Key</span>
+				<span *ngIf="card.id === 2001">Black Market deck</span>
 			</p>
 		</article>
 	</section>
