--- a/src/app/card-list/card-list.component.html
+++ b/src/app/card-list/card-list.component.html
@@ -31,6 +31,7 @@
 	<span *ngIf="setup.urchin"><img src="assets/Mercenary.jpg">Mercenary pile</span>
 	<span *ngIf="setup.page"><img src="assets/page.png">Page upgrades</span>
 	<span *ngIf="setup.peasant"><img src="assets/peasant.png">Peasant upgrades</span>
+	<span *ngIf="setup.loot"><img src="assets/loot.png">Loot</span>
 	<span *ngIf="setup.wisp"><img src="assets/cards/Nocturne/Will-o-Wisp.jpg">Will o’ Wisp</span>
 	<span *ngIf="setup.imp"><img src="assets/cards/Nocturne/Imp.jpg">Imp</span>
 	<span *ngIf="setup.ghost"><img src="assets/cards/Nocturne/Ghost.jpg">Ghost</span>
