--- a/src/app/card-detail/card-detail.component.css
+++ b/src/app/card-detail/card-detail.component.css
@@ -1,42 +1,35 @@
 div {
   position: fixed;
   top: 0;
-  left: 0;
-  bottom: 0;
   right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #333;
   display: grid;
   grid-template-rows: 3em auto;
-  perspective: 1000px;
-  background: #000;
-}
-div aside, div article {
-  position: absolute;
-  top: 3em;
-  left: 0;
-  bottom: 0;
-  right: 0;
   overflow: auto;
-  backface-visibility: hidden;
-}
-div aside img, div article img {
-  max-width: 100vw;
 }
 div aside {
-  background: #000;
   display: grid;
   align-items: center;
   justify-items: center;
 }
 div article {
-  transform: rotateY(180deg);
+  max-width: 40em;
+  margin: auto;
   background: #EEE;
   color: #000;
   padding: 1em;
+  text-align: center;
+}
+div article h2 {
+  margin-top: 0;
 }
 div article .help {
   background: #DDD;
   border: 1px solid silver;
   padding: 0.5em;
+  text-align: left;
 }
 div article .setup span {
   display: inline-block;
@@ -45,16 +38,6 @@ div article .setup span {
   border: 1px solid blue;
   background: lightblue;
   color: blue;
-}
-div section {
-  transition: 0.6s;
-  transform: rotateY(0deg);
-  transform-style: preserve-3d;
-  position: relative;
-  height: 100vh;
-}
-div.back section {
-  transform: rotateY(180deg);
 }
 
 /*# sourceMappingURL=card-detail.component.css.map */
