--- a/src/app/card-list/card-list.component.css
+++ b/src/app/card-list/card-list.component.css
@@ -8,7 +8,6 @@ ul.cards {
 }
 ul li {
   list-style: none;
-  background: #000;
   padding: 0.25em;
   text-align: center;
   font-size: 0.75em;
@@ -36,7 +35,7 @@ ul li img {
   overflow: hidden;
 }
 .setup img, .wide img {
-  max-width: 100%;
+  width: 100%;
   max-height: 180px;
   object-fit: contain;
 }
