--- a/src/app/card-list/card-list.component.scss
+++ b/src/app/card-list/card-list.component.scss
@@ -9,7 +9,6 @@ ul {
 
 	li {
 		list-style: none;
-		background: #000;
 		padding: 0.25em;
 		text-align: center;
 		font-size: 0.75em;
@@ -39,7 +38,7 @@ ul {
 		overflow: hidden;
 	}
 	img {
-		max-width: 100%;
+		width: 100%;
 		max-height: 180px;
 		object-fit: contain;
 	}
