--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 body {
 	font: 16px/1.3 Calibri;
-	background: #000;
+	background: #333;
 	color: #FFF;
 }
 p {
@@ -21,4 +21,8 @@ button {
 	&:disabled {
 		opacity: 0.6;
 	}
+}
+
+ul {
+	padding-inline-start: 1.25em;
 }
